Add autofix parameter for date fields in changelog and reference documentation

--- a/changelog.mdx
+++ b/changelog.mdx
@@ -12,6 +12,7 @@ Enhanced date processing and more reliable import experience.
 - **Bulk Date Correction**: Fix multiple date columns at once instead of row by row
 - **Better Format Support**: Handles more date formats automatically without manual intervention
 - **Reduced Manual Work**: Less time spent manually correcting date formatting errors
+- **Autofix Control**: New `autofix` parameter for date fields lets you control whether format fixes are applied automatically or require user approval
 
 ### More Reliable Imports
 - **Fewer Import Failures**: Improved stability means fewer interrupted imports
